legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr65066.c-4.8.2-2.out.txt
pr65066.c:5:54: error: redefinition of parameter ‘restrict’
 extern int sscanf (const char *restrict, const char *restrict, ...);
                                                      ^
pr65066.c:5:32: note: previous definition of ‘restrict’ was here
 extern int sscanf (const char *restrict, const char *restrict, ...);
                                ^
